force-app/main/default/objects/Routing_Metric__c/Routing_Metric__c.object-meta.xml
<CustomObject>
    <label>Routing Metric</label>
    <nameField>
        <label>Routing Metric Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>