force-app/main/default/objects/Routing_Metric__c/fields/Accuracy_Percent__c.field-meta.xml
<CustomField>
    <fullName>Accuracy_Percent__c</fullName>
    <label>Accuracy Percent</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>