force-app/main/default/objects/Routing_Metric__c/fields/Average_SLA_Risk__c.field-meta.xml
<CustomField>
    <fullName>Average_SLA_Risk__c</fullName>
    <label>Average SLA Risk</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>