force-app/main/default/objects/Routing_Metric__c/fields/Correctly_Routed__c.field-meta.xml
<CustomField>
    <fullName>Correctly_Routed__c</fullName>
    <label>Correctly Routed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>