force-app/main/default/objects/Routing_Metric__c/fields/High_Confidence_Count__c.field-meta.xml
<CustomField>
    <fullName>High_Confidence_Count__c</fullName>
    <label>High Confidence Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>