force-app/main/default/objects/Routing_Metric__c/fields/Manual_Override_Count__c.field-meta.xml
<CustomField>
    <fullName>Manual_Override_Count__c</fullName>
    <label>Manual Override Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>