force-app/main/default/objects/Routing_Metric__c/fields/Metric_date__c.field-meta.xml
<CustomField>
    <fullName>Metric_date__c</fullName>
    <label>Metric date</label>
    <type>Date</type>
</CustomField>