force-app/main/default/objects/Routing_Metric__c/fields/PII_Cases__c.field-meta.xml
<CustomField>
    <fullName>PII_Cases__c</fullName>
    <label>PII Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>